# spatial_index_benchmark

./: CMakeLists.txt  LICENSE  README.md
app/: spatial_index_benchmark.cpp
include/: types.h  utils.h
lib/: CMakeLists.txt
lib/i-octree/octree2/: Octree.h
lib/ikd_tree/: CMakeLists.txt
scripts/: plot_timing.py
